fixed list not showing data

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,20 @@
 body{
   margin: 0;
+  padding:0;
   font-family: Roboto; 
 }
 .wrapper{
-  max-width: 960px;
+  max-width: 100%;
   margin: 0 auto;
 }
+  
 h1{
   margin: 40px auto;
-  color: #ff0aa7;
+  width: 100%;
+  color: #4f32de;
   text-align: center;
+  text-transform: uppercase;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 ul{
   padding: 0;
@@ -21,7 +26,7 @@ li{
   margin: 10px auto;
 }
 li h4{
-  color: #ff0aa7;
+  color: #4f32de;
   margin: 0;
   text-transform: capitalize;
 }
@@ -36,6 +41,7 @@ footer{
 }
 form{
   max-width: 960px;
+  min-width: 380px;
   margin: 0 auto;
   text-align: center;
 }
@@ -56,9 +62,9 @@ input, select{
   margin: 0 10px;
 }
 button{
-  color: white;
+  color: #ffea4b;
   border: 0;
-  background: #ff0aa7;
+  background: #4f32de;
   padding: 6px;
   min-width: 80px;
   border-radius: 4px;
@@ -66,7 +72,8 @@ button{
 footer a{
   text-align: center;
   display: block;
-  color: #999;
+  color: rgb(255, 151, 53);
   margin-top: 40px;
-  font-size: 0.7em;
+  font-size: 0.9em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
